--- a/style.css
+++ b/style.css
@@ -41,6 +41,17 @@ body {
     z-index: 5;
 }
 
+.heart{
+    position: relative;
+    background-image: url(./images/health.png);
+    width: 50px;
+    height: 50px;
+    background-size: 100%;
+    background-position: center;
+    background-repeat: no-repeat;
+    z-index: 5;
+}
+
 .bullet{
     background-color: aquamarine;
     z-index: 5;
